[package]
name = "advent_of_code_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
nom = "7.1.1"
chrono = "0.4.23"
clap = { version = "4.0.27", features = ["derive"] }
rustc-hash = "1.1.0"
